# claude-skill-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: demo-driver.py  demo-expect.exp  demo-sandbox.py  record-demo.sh
src/skill_manager/: __init__.py  __main__.py  cli.py  models.py
src/skill_manager/core/: budget.py  config.py  conflicts.py  deployer.py  discovery.py  inventory.py  updates.py
src/skill_manager/tui/: app.py
src/skill_manager/tui/screens/: conflicts.py  help.py  preview.py  settings.py
src/skill_manager/tui/widgets/: source_panel.py  target_panel.py  tree_utils.py
tests/: conftest.py  test_budget.py  test_cc_plugin.py  test_cli.py  test_config.py  test_conflicts.py  test_deployer.py  test_discovery.py  test_discovery_advanced.py  test_inventory.py  test_plugin_installs.py  test_settings.py  test_tui.py  test_updates.py
