[project]
name = "claude-skill-manager"
version = "1.4.1"
description = "Manage Claude Code skills from multiple sources with symlink-based deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alain Clément", email = "alain@clement.aero" },
]
keywords = ["claude-code", "skills", "plugin-manager", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "textual>=3.0",
    "pydantic>=2.10",
    "tomli-w>=1.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/aclemen1/claude-skill-manager"
Repository = "https://github.com/aclemen1/claude-skill-manager"
Issues = "https://github.com/aclemen1/claude-skill-manager/issues"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=7.0"]

[project.scripts]
csm = "skill_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
